--- a/data/books.yml
+++ b/data/books.yml
@@ -194,7 +194,7 @@
     date_finished: 2020-09-15
     rating: 4
     progress: 100
-    height:
+    height: 109
 
   - title: The Curse of Bigness
     subtitle: Antitrust in the New Gilded Age
