Updated Phoenix Wright and Usefulness of Useless Knowledge statuses

--- a/data/books.yml
+++ b/data/books.yml
@@ -34,9 +34,9 @@
     author: Abraham Flexner
     cover: https://covers.openlibrary.org/b/id/11456656-L.jpg
     link: https://openlibrary.org/works/OL24725948W/The_Usefulness_of_Useless_Knowledge
-    date_finished: N/A
-    rating: N/A
-    progress: 59
+    date_finished: 2021-07-30
+    rating: 3
+    progress: 100
 
   - title: Resilient Management
     subtitle: null
