Fix up Alpha Sapphire title

--- a/data/games.yml
+++ b/data/games.yml
@@ -52,7 +52,7 @@
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co1z1x.jpg"
     link: "https://www.igdb.com/games/pokemon-black"
 
-  - title: "Pokémon Omega Ruby and Alpha Sapphire"
+  - title: "Pokémon Alpha Sapphire"
     platform: "Nintendo 3DS"
     id: 6898
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co3co4.jpg"
