--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -49,7 +49,7 @@ http {
     }
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com https://plausible.io/js/plausible.js; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com https://platform.twitter.com https://plausible.io/js/plausible.js; frame-src 'self' https://www.youtube.com https://platform.twitter.com ; child-src 'self' blob: ;" always;
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com https://platform.twitter.com; frame-src 'self' https://www.youtube.com https://platform.twitter.com ; child-src 'self' blob: ;" always;
     add_header X-Frame-Options SAMEORIGIN always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options nosniff always;
@@ -63,6 +63,25 @@ http {
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
       expires 7d;
+    }
+
+    location = /pageview.js {
+      proxy_pass https://plausible.io/js/plausible.js;
+      proxy_buffering on;
+      proxy_cache jscache;
+      proxy_cache_valid 200 6h;
+      proxy_cache_use_stale updating error timeout invalid_header http_500;
+      add_header X-Cache $upstream_cache_status;
+    }
+
+    location = /api/event {
+      proxy_pass https://plausible.io/api/event;
+      proxy_buffering on;
+      proxy_http_version 1.1;
+
+      proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Host  $host;
     }
 
     location /metrics {
