--- a/render.yaml
+++ b/render.yaml
@@ -7,13 +7,31 @@ services:
     pullRequestPreviewsEnabled: true
     headers:
       - path: /*
+        name: Strict-Transport-Security
+        value: "max-age=31536000; includeSubDomains"
+      - path: /*
         name: X-Frame-Options
         value: SAMEORIGIN
       - path: /*
         name: X-XSS-Protection
         value: "1; mode=block"
+      - path: /*
+        name: Content-Security-Policy
+        value: "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com https://platform.twitter.com; frame-src 'self' https://www.youtube.com https://platform.twitter.com ; child-src 'self' blob: ;"
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
+      - path: /*
+        name: Referrer-Policy
+        value: no-referrer
+      - path: /*
+        name: Permissions-Policy
+        value: "interest-cohort=()"
     routes:
       - type: rewrite
         source: /pageview.js
         destination: https://plausible.io/js/plausible.js
+      - type: rewrite
+        source: /api/event
+        destination: https://plausible.io/api/event
   
