Started playing Ace Attorney Dual Destinies
Also added ID for Apollo Justice

--- a/data/games.yml
+++ b/data/games.yml
@@ -1,6 +1,12 @@
 - list: Actively playing
   games:
   
+  - title: "Phoenix Wright: Ace Attorney − Dual Destinies"
+    platform: "Nintendo 3DS"
+    id: 1432
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co27xe.jpg"
+    link: "https://www.igdb.com/games/phoenix-wright-ace-attorney-dual-destinies"
+  
   - title: "Scarlet Nexus"
     platform: "Playstation 5"
     id: 133302
@@ -75,7 +81,7 @@
   
   - title: "Apollo Justice: Ace Attorney"
     platform: "Nintendo 3DS"
-    id: 0000
+    id: 1429
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co1pke.jpg"
     link: "https://www.igdb.com/games/apollo-justice-ace-attorney"
     date_finished: 2021-08-15
